[package]
name = "host"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "1.0.2"
anyhow = "1.0.38"
getrandom = "0.2.2"
serde = "1.0.123"
bincode = "1.3.2"
