[package]
name = "wasm_plugin_host"
version = "0.1.0"
authors = ["Alec Deason <wasm_plugin@tinycountry.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/alec-deason/wasm_plugin/tree/main/host"
description = "A low-ish level tool for easily hosting WASM based plugins"
keywords = ["WASM", "plugin"]
categories = ["game-development", "wasm"]

[features]
default = ["inject_getrandom"]
inject_getrandom = ["getrandom"]

[dependencies]
wasmer = "1"
getrandom = { version = "0.2", optional = true }
serde = "1"
bincode = "1"
