[package]
name = "wasm_plugin_host"
version = "0.1.2"
authors = ["Alec Deason <wasm_plugin@tinycountry.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/alec-deason/wasm_plugin/tree/main/host"
description = "A low-ish level tool for easily hosting WASM based plugins"
keywords = ["WASM", "plugin"]
categories = ["game-development", "wasm"]

[features]
default = ["inject_getrandom", "serialize_bincode"]
inject_getrandom = ["getrandom"]
serialize_bincode = ["bincode", "serde"]
serialize_nanoserde_json = ["nanoserde"]

[dependencies]
wasmer = "1"
getrandom = { version = "0.2", optional = true }
serde = { version = "1", optional = true }
bincode = { version = "1", optional = true }
nanoserde = { version = "0.1", optional = true }
